add source folder to organize code

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ test {
 sourceSets {
     test {
         java {
-            srcDirs = ['.'] // Root directory
+            srcDirs = ['./src'] // Root directory
         }
     }
 }
